Actualizacion de 5ta pagina html ofertas

--- a/proyecte--2/css/style.css
+++ b/proyecte--2/css/style.css
@@ -62,3 +62,12 @@ footer {
     }
   }
 
+.ofertasButton {
+    font-size: uppercase;
+    font-display: flex;
+}
+
+/* OFERTAS */
+.tituloOfertas {
+    font-size: 10rem solid;
+}
